--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,6 +1,174 @@
 @tailwind base;
 @tailwind components;
 
+:root {
+    --animate-delay: 0.1s;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Eudoxus Sans", sans-serif;
+    scroll-behavior: smooth;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.full-height {
+    min-height: 100%;
+}
+
+.gradient-01 {
+    background-image: linear-gradient(
+            270deg,
+            hsl(295deg 76% 51%) 0%,
+            hsl(284deg 70% 73%) 26%,
+            hsl(257deg 70% 86%) 39%,
+            hsl(202deg 92% 90%) 50%,
+            hsl(215deg 77% 81%) 61%,
+            hsl(221deg 73% 70%) 74%,
+            hsl(220deg 76% 51%) 100%
+    );
+    filter: blur(125px);
+}
+
+.gradient-06 {
+    background-image: linear-gradient(
+            270deg,
+            hsl(295deg 76% 51%) 0%,
+            hsl(284deg 70% 73%) 26%,
+            hsl(257deg 70% 86%) 39%,
+            hsl(202deg 92% 90%) 50%,
+            hsl(215deg 77% 81%) 61%,
+            hsl(221deg 73% 70%) 74%,
+            hsl(220deg 76% 51%) 100%
+    );
+    filter: blur(125px);
+}
+
+.gradient-02 {
+    position: absolute;
+    width: 200px;
+    height: 438px;
+    top: 0px;
+    right: 0px;
+    background: #7aebfb;
+    filter: blur(190px);
+}
+
+.gradient-03 {
+    position: absolute;
+    width: 404px;
+    height: 800px;
+    left: 20%;
+    top: 5%;
+
+    background: rgba(149, 66, 232, 0.35);
+    filter: blur(175px);
+    transform: rotate(-114.2deg);
+}
+
+.gradient-04 {
+    position: absolute;
+    width: 304px;
+    height: 100vh;
+    left: 30%;
+    top: 10%;
+
+    background: rgba(45, 72, 152, 0.75);
+    filter: blur(200px);
+    transform: rotate(-53.13deg);
+}
+
+.gradient-05 {
+    background: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0.04) 0%,
+            rgba(255, 255, 255, 0) 100%
+    );
+}
+
+.gradient-07 {
+    position: absolute;
+    width: 665px;
+    height: 640px;
+    right: -30%;
+    top: 0;
+
+    background: rgba(122, 235, 251, 0.35);
+    filter: blur(250px);
+    transform: rotate(-95.59deg);
+}
+
+.gradient-08 {
+    position: absolute;
+    width: 500px;
+    height: 600px;
+    left: -25%;
+    top: -15%;
+
+    background: rgba(37, 101, 225, 0.35);
+    filter: blur(125px);
+    transform: rotate(-87.51deg);
+}
+
+.feedback-gradient {
+    position: absolute;
+    width: 200px;
+    height: 316px;
+    left: 0px;
+    top: 0px;
+
+    background: #8d39a3;
+    filter: blur(175px);
+}
+
+.footer-gradient {
+    position: absolute;
+    width: 500px;
+    height: 100px;
+    left: 37%;
+    bottom: 0;
+
+    background: #65c4fa;
+    filter: blur(150px);
+}
+
+.glassmorphism {
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.hero-img {
+    --animate-duration: 1.5s;
+}
+
+.about-card {
+    opacity: 0;
+}
+
+.anim {
+    opacity: 0;
+}
+
+@keyframes animate__rollInRight {
+    from {
+        opacity: 0;
+        transform: translate3d(100%,0,0) rotate(-120deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateZ(0);
+    }
+}
 
 .inner-width {
     @apply 2xl:max-w-[1280px] w-full;
